  allocation functions. (Ilia)
- Fixed bug #27505 (htmlentities() does not handle BIG5 correctly). (Ilia, 
  ywliu at hotmail dot com)
- Fixed bug #27460 (base64_decode() does not handle extra padding).
  (Ilia, naish at klanen dot net)
- Fixed bug #27443 (defined() returns wrong type). (Derick)
- Fixed bug #27437 (wrong freetype include inside GD library). (Ilia)
- Fixed bug #27384 (unpack() misbehaves with 1 char string). (GeorgeS)
- Fixed bug #27383 (Potential crash inside fopen_wrapper, while parsing
  response code). (Ilia)
- Fixed bug #27341 (HEAD requests fail to return data). (Ilia)
- Fixed bug #27337 (missing sapi_shutdown() in sapi/isapi causes memory leak). 
  (Jani, msisolak at yahoo dot com)
- Fixed bug #27328 (ftp extension relies on 32-bit longs). (Sara)
- Fixed bug #27295 (memory leak inside sscanf()). (Ilia)
- Fixed bug #27293 (two crashes inside image2wbmp()). (Ilia)
- Fixed bug #27278 (*printf() functions treat arguments as if passed by
  reference). (Ilia)
- Fixed bug #26753 (zend_fetch_list_dtor_id() doesn't check NULL strings).
  (Jani, Markus dot Lidel at shadowconnect dot com)
- Fixed bug #26005 (Random "cannot change the session ini settings" errors).
  (Jani, jsnajdr at kerio dot com)
- Fixed bug #21760 (Use of uninitialized pointer inside php_read()). (Ilia, 
  uce at ftc dot gov)
- Fixed bug #27238 (iptcparse() function misses some fields). (Pierre)

16 Feb 2004, Version 4.3.5RC3
- Fixed zero bytes memory allocation when no extra ini files are found in the
  --with-config-file-scan-dir specified directory. (Eric Colinet, Derick)
- Fixed bug #27354 (Modulus operator crashes PHP). (Derick)
- Fixed bug #27235 (Interbase NUMERIC x.0 field returns empty string on 0).
  (Ard)
- Fixed bug #27196 (Missing content_length initialization in apache 2 sapis).
  (Ilia, pdoru at kappa dot ro)
- Fixed bug #27183 (userland stream wrapper segfaults on stream_write).
  (Moriyoshi)
- Fixed bug #27175 (tzset() is not being called by PHP on startup).